# mcp

./: .env  .env.example  .gitignore  README.md  pyproject.toml  requirements.txt  server.py  test.py
app/: cli.py  mcp_server.py
app/clients/: backend_client.py
app/core/: config.py  errors.py
app/services/: cache.py  rent_manager.py
app/tools/: __init__.py  _common.py  maintenance.py  summary.py  tenants.py  units.py
app/utils/: logger.py  response.py
backend/: cli.py  data.py  main.py
mcpserver/: server.py
tests/: test_backend_client.py  test_rent_manager_service.py  test_response.py  test_tool_common.py
